Fix avatar too small
 *caused by global declaration

--- a/src/components/Skills/SkillsStyles.module.css
+++ b/src/components/Skills/SkillsStyles.module.css
@@ -15,22 +15,22 @@
 .skillsSection {
   display: flex;
   justify-content: center;
-  gap: 10px;
-  margin-bottom: 20px;
+  gap: 20px;
+  margin-bottom: 10px;
+
+  img {
+    width: 60px;
+    height: 60px;
+    transition: transform 300ms ease-out;
+  }
+
+  img:hover {
+    transform: translateY(-2px) scale(1.05);
+  }
 }
 
 hr {
   width: 70%;
   border: 1px solid var(--text-color);
   margin: 20px 0;
-}
-
-img {
-  width: 60px;
-  height: 60px;
-  transition: transform 300ms ease-out;
-}
-
-img:hover {
-  transform: translateY(-2px) scale(1.05);
 }
